--- a/src/javafxmlapplication/view/ModifyCategory.fxml
+++ b/src/javafxmlapplication/view/ModifyCategory.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="pane" prefHeight="250.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.ModifyCategoryController">
+<Pane fx:id="pane" prefHeight="250.0" prefWidth="600.0" stylesheets="@../styles/stylesheet.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.ModifyCategoryController">
    <children>
       <VBox alignment="CENTER" prefHeight="250.0" prefWidth="600.0" spacing="50.0">
          <children>
