--- a/src/javafxmlapplication/view/UpdateExpense.fxml
+++ b/src/javafxmlapplication/view/UpdateExpense.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="620.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.UpdateExpenseController">
+<BorderPane prefHeight="620.0" prefWidth="930.0" stylesheets="@../styles/stylesheet.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.UpdateExpenseController">
    <center>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
