--- a/src/javafxmlapplication/view/LogIn.fxml
+++ b/src/javafxmlapplication/view/LogIn.fxml
@@ -5,10 +5,13 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <BorderPane fx:id="borderPane" maxHeight="500.0" maxWidth="800.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" stylesheets="@../styles/stylesheet.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.LogInController">
@@ -17,10 +20,21 @@
          <children>
             <VBox alignment="CENTER" StackPane.alignment="CENTER">
                <children>
+                  <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../styles/resources/finanzas.png" />
+                     </image>
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin>
+                  </ImageView>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sub-header" text="Log in">
                      <VBox.margin>
                         <Insets bottom="40.0" />
-                     </VBox.margin></Text>
+                     </VBox.margin>
+                     <font>
+                        <Font size="30.0" />
+                     </font></Text>
                   <VBox alignment="CENTER" spacing="20.0" VBox.vgrow="NEVER">
                      <children>
                         <VBox alignment="CENTER_LEFT" fillWidth="false" VBox.vgrow="NEVER">
