--- a/src/javafxmlapplication/view/UpdateExpense.fxml
+++ b/src/javafxmlapplication/view/UpdateExpense.fxml
@@ -51,13 +51,14 @@
                   <HBox alignment="CENTER" spacing="10.0">
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Category:" />
-                        <ComboBox fx:id="categorySelection" prefHeight="25.0" prefWidth="250.0" />
+                        <ComboBox fx:id="categorySelection" prefHeight="26.0" prefWidth="230.0" />
+                        <Button fx:id="addCategoryButton" mnemonicParsing="false" onAction="#addCategoryAction" text="+" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" spacing="10.0">
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date:" />
-                        <DatePicker fx:id="dateSelection" prefHeight="25.0" prefWidth="250.0" />
+                        <DatePicker fx:id="dateSelection" prefHeight="26.0" prefWidth="231.0" />
                      </children>
                   </HBox>
                </children>
