--- a/src/javafxmlapplication/view/SignUp.fxml
+++ b/src/javafxmlapplication/view/SignUp.fxml
@@ -151,7 +151,7 @@
                   </VBox>
                   <VBox fillWidth="false" prefWidth="506.0" GridPane.columnSpan="3" GridPane.rowIndex="5">
                      <children>
-                        <PasswordField fx:id="confirmPasswordField" onKeyPressed="#onKeyPressedOnConfirmPassword" onKeyTyped="#onPasswordWritten" prefHeight="26.0" prefWidth="456.0" promptText="Confirm password" />
+                        <PasswordField fx:id="confirmPasswordField" onKeyPressed="#onKeyPressedOnConfirmPassword" onKeyTyped="#onPasswordWritten" prefHeight="26.0" prefWidth="456.0" promptText="Confirm password..." />
                         <Text fx:id="confirmPasswordMessage" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="The passwords don't match" />
                      </children>
                   </VBox>
