--- a/src/javafxmlapplication/view/LogIn.fxml
+++ b/src/javafxmlapplication/view/LogIn.fxml
@@ -9,28 +9,35 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="borderPane" maxHeight="500.0" maxWidth="800.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" stylesheets="@../styles/stylesheet.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.LogInController">
+<BorderPane fx:id="borderPane" maxHeight="500.0" maxWidth="800.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" stylesheets="@../styles/stylesheet.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.LogInController">
    <center>
       <StackPane BorderPane.alignment="CENTER">
          <children>
             <VBox alignment="CENTER" StackPane.alignment="CENTER">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sub-header" text="Log in">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sub-header" text="Log In">
                      <VBox.margin>
                         <Insets bottom="40.0" />
-                     </VBox.margin></Text>
-                  <VBox alignment="CENTER" spacing="20.0" VBox.vgrow="NEVER">
+                     </VBox.margin>
+                     <font>
+                        <Font size="36.0" />
+                     </font></Text>
+                  <VBox alignment="CENTER" VBox.vgrow="NEVER">
                      <children>
                         <VBox alignment="CENTER_LEFT" fillWidth="false" VBox.vgrow="NEVER">
                            <children>
-                              <Label text="Nickname">
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username:">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
                                  <VBox.margin>
-                                    <Insets bottom="5.0" left="5.0" />
+                                    <Insets bottom="2.0" />
                                  </VBox.margin>
-                              </Label>
-                              <TextField fx:id="nickNameInput" onKeyPressed="#onKeyPressedOnNickName" onKeyTyped="#onTextTyped" prefHeight="26.0" prefWidth="400.0" promptText="Nickname" />
+                              </Text>
+                              <TextField fx:id="nickNameInput" onKeyPressed="#onKeyPressedOnNickName" prefHeight="26.0" prefWidth="400.0" />
                               <Label fx:id="nickNameErrorText" styleClass="errorText" />
                            </children>
                         </VBox>
@@ -40,15 +47,18 @@
                                  <children>
                                     <VBox>
                                        <children>
-                                          <Label text="Password">
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password:">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
                                              <VBox.margin>
-                                                <Insets bottom="5.0" left="5.0" />
+                                                <Insets bottom="2.0" />
                                              </VBox.margin>
-                                          </Label>
-                                          <HBox prefHeight="26.0" prefWidth="450.0" spacing="10.0">
+                                          </Text>
+                                          <HBox prefHeight="26.0" prefWidth="450.0" spacing="5.0">
                                              <children>
-                                                <PasswordField fx:id="passwordInput" onKeyPressed="#onKeyPressedOnPassword" prefHeight="26.0" prefWidth="400.0" promptText="Password" />
-                                                <Button fx:id="seePasswordButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="40.0" text="👁" />
+                                                <PasswordField fx:id="passwordInput" onKeyPressed="#onKeyPressedOnPassword" onKeyTyped="#onPasswordWritten" prefHeight="26.0" prefWidth="400.0" />
+                                                <Button fx:id="seePasswordButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="33.0" text="👁" />
                                              </children>
                                           </HBox>
                                        </children>
@@ -58,17 +68,26 @@
                               <Label fx:id="passwordErrorText" styleClass="errorText" />
                            </children>
                         </VBox>
-                        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLoginButtonPressed" onKeyPressed="#onKeyPressedOnLogin" text="Log In" />
+                        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLoginButtonPressed" onKeyPressed="#onKeyPressedOnLogin" prefHeight="35.0" prefWidth="99.0" text="LOG IN">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin></Button>
                      </children>
                      <padding>
                         <Insets left="180.0" right="180.0" />
                      </padding>
                   </VBox>
-                  <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="20.0">
+                  <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="10.0">
                      <children>
-                        <Text fx:id="signupText" strokeType="OUTSIDE" strokeWidth="0.0" text="If you do not have an account yet, sign up here:" />
+                        <Text fx:id="signupText" strokeType="OUTSIDE" strokeWidth="0.0" text="If you do not have an account yet, sign up here:">
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin></Text>
                         <Button fx:id="signupButton" mnemonicParsing="false" onAction="#onSignUpButtonPressed" text="Sign Up" />
                      </children>
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin>
                   </HBox>
                </children>
             </VBox>
@@ -78,7 +97,7 @@
    <top>
       <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" styleClass="header" BorderPane.alignment="CENTER">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="App title" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="CashTrack" />
          </children>
       </HBox>
    </top>
