--- a/src/javafxmlapplication/styles/stylesheet.css
+++ b/src/javafxmlapplication/styles/stylesheet.css
@@ -39,7 +39,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
 }
 
 .list-view{
-    -fx-background-color: beige;
+    -fx-background-color: e6faff;
 } 
 
 .list-view .list-cell{
