--- a/src/javafxmlapplication/view/LogIn.fxml
+++ b/src/javafxmlapplication/view/LogIn.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="borderPane" maxHeight="600.0" maxWidth="800.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../styles/stylesheet.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.LogInController">
+<BorderPane fx:id="borderPane" maxHeight="600.0" maxWidth="850.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="850.0" stylesheets="@../styles/stylesheet.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.LogInController">
    <center>
       <StackPane BorderPane.alignment="CENTER">
          <children>
@@ -39,53 +39,64 @@
                      <children>
                         <VBox alignment="CENTER_LEFT" fillWidth="false" VBox.vgrow="NEVER">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username:">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets bottom="2.0" />
-                                 </VBox.margin>
-                              </Text>
-                              <TextField fx:id="nickNameInput" onKeyPressed="#onKeyPressedOnNickName" prefHeight="26.0" prefWidth="400.0" />
+                              <VBox alignment="CENTER_LEFT">
+                                 <children>
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username:">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Text>
+                                    <TextField fx:id="nickNameInput" onKeyPressed="#onKeyPressedOnNickName" prefHeight="26.0" prefWidth="400.0" />
+                                 </children>
+                              </VBox>
                               <Label fx:id="nickNameErrorText" styleClass="errorText" />
                            </children>
+                           <VBox.margin>
+                              <Insets left="40.0" />
+                           </VBox.margin>
                         </VBox>
                         <VBox>
                            <children>
-                              <HBox alignment="BOTTOM_LEFT" spacing="5.0" VBox.vgrow="NEVER">
+                              <HBox alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
                                  <children>
-                                    <VBox>
+                                    <VBox alignment="CENTER_LEFT">
                                        <children>
                                           <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password:">
                                              <font>
                                                 <Font size="14.0" />
                                              </font>
                                              <VBox.margin>
-                                                <Insets bottom="2.0" />
+                                                <Insets />
                                              </VBox.margin>
                                           </Text>
-                                          <HBox prefHeight="26.0" prefWidth="450.0" spacing="5.0">
+                                          <HBox alignment="BOTTOM_LEFT" prefHeight="26.0" prefWidth="450.0" spacing="5.0">
                                              <children>
                                                 <PasswordField fx:id="passwordInput" onKeyPressed="#onKeyPressedOnPassword" onKeyTyped="#onPasswordWritten" prefHeight="26.0" prefWidth="400.0" />
-                                                <Button fx:id="seePasswordButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="33.0" text="👁" />
+                                                <Button fx:id="seePasswordButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="35.0" text="👁">
+                                                   <HBox.margin>
+                                                      <Insets />
+                                                   </HBox.margin></Button>
                                              </children>
                                           </HBox>
                                        </children>
                                     </VBox>
                                  </children>
+                                 <VBox.margin>
+                                    <Insets left="40.0" />
+                                 </VBox.margin>
                               </HBox>
                               <Label fx:id="passwordErrorText" styleClass="errorText" />
                            </children>
                         </VBox>
-                        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLoginButtonPressed" onKeyPressed="#onKeyPressedOnLogin" prefHeight="35.0" prefWidth="99.0" text="LOG IN">
+                        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLoginButtonPressed" onKeyPressed="#onKeyPressedOnLogin" prefHeight="35.0" prefWidth="99.0" text="Log In">
                            <VBox.margin>
                               <Insets top="10.0" />
-                           </VBox.margin></Button>
+                           </VBox.margin>
+                        </Button>
                      </children>
-                     <padding>
+                     <VBox.margin>
                         <Insets left="180.0" right="180.0" />
-                     </padding>
+                     </VBox.margin>
                   </VBox>
                   <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="10.0">
                      <children>
