--- a/src/javafxmlapplication/view/ModifyCategory.fxml
+++ b/src/javafxmlapplication/view/ModifyCategory.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="pane" prefHeight="250.0" prefWidth="600.0" stylesheets="@../styles/stylesheet.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.ModifyCategoryController">
+<Pane fx:id="pane" prefHeight="250.0" prefWidth="600.0" stylesheets="@../styles/stylesheet.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.ModifyCategoryController">
    <children>
       <VBox alignment="CENTER" prefHeight="250.0" prefWidth="600.0" spacing="50.0">
          <children>
@@ -17,7 +17,7 @@
                <children>
                   <HBox alignment="CENTER" spacing="10.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name:" />
                         <TextField fx:id="nameText" prefHeight="25.0" prefWidth="232.0" />
                      </children>
                      <padding>
@@ -29,14 +29,14 @@
             </HBox>
             <HBox alignment="CENTER" spacing="10.0">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description:" />
                   <TextField fx:id="descriptionText" prefHeight="25.0" prefWidth="425.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER" spacing="50.0">
                <children>
-                  <Button fx:id="acceptButton" mnemonicParsing="false" onAction="#acceptAction" prefHeight="25.0" prefWidth="52.0" text="Save" />
-                  <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancelAction" text="Cancel" />
+                  <Button fx:id="acceptButton" mnemonicParsing="false" onAction="#acceptAction" prefHeight="30.0" prefWidth="80.0" text="Save" />
+                  <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancelAction" prefWidth="80.0" text="Cancel" />
                </children>
             </HBox>
          </children>
