--- a/src/javafxmlapplication/view/YearComparison.fxml
+++ b/src/javafxmlapplication/view/YearComparison.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="1000.0" stylesheets="@../styles/stylesheet.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.YearComparisonController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="1000.0" stylesheets="@../styles/stylesheet.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.YearComparisonController">
    <center>
       <VBox fx:id="wrapper" alignment="CENTER" BorderPane.alignment="CENTER" />
    </center>
    <top>
       <StackPane prefHeight="50.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+            <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <Button fx:id="goBackButton" mnemonicParsing="false" onAction="#onGoBackButtonPressed" prefHeight="35.0" prefWidth="40.0" text="◄">
                      <font>
@@ -24,7 +24,7 @@
                   </Button>
                </children>
                <StackPane.margin>
-                  <Insets left="10.0" />
+                  <Insets left="20.0" top="20.0" />
                </StackPane.margin>
             </HBox>
          </children>
