--- a/src/javafxmlapplication/view/Main.fxml
+++ b/src/javafxmlapplication/view/Main.fxml
@@ -17,11 +17,17 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="1000.0" stylesheets="@../styles/stylesheet.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.MainController">
    <top>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header" text="CashTrack" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" styleClass="header" BorderPane.alignment="CENTER">
          <BorderPane.margin>
-            <Insets bottom="10.0" top="10.0" />
+            <Insets />
          </BorderPane.margin>
-      </Text>
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header" text="CashTrack" />
+         </children>
+         <padding>
+            <Insets bottom="10.0" top="10.0" />
+         </padding>
+      </VBox>
    </top>
    <left>
       <VBox prefHeight="530.0" prefWidth="230.0" spacing="10.0" BorderPane.alignment="CENTER">
@@ -53,7 +59,7 @@
                         <Insets />
                      </GridPane.margin>
                   </VBox>
-                  <Button fx:id="editButton" mnemonicParsing="false" onAction="#editProfile" prefHeight="45.0" prefWidth="50.0" text="✎" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                  <Button id="penIconButton" fx:id="editButton" mnemonicParsing="false" onAction="#editProfile" prefHeight="45.0" prefWidth="50.0" text="✎" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                      <font>
                         <Font size="18.0" />
                      </font></Button>
