--- a/src/javafxmlapplication/view/ModifyCategory.fxml
+++ b/src/javafxmlapplication/view/ModifyCategory.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="pane" prefHeight="250.0" prefWidth="600.0" stylesheets="@../styles/stylesheet.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.ModifyCategoryController">
+<Pane fx:id="pane" prefHeight="250.0" prefWidth="600.0" stylesheets="@../styles/stylesheet.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.ModifyCategoryController">
    <children>
-      <VBox alignment="CENTER" prefHeight="250.0" prefWidth="600.0" spacing="50.0">
+      <VBox alignment="CENTER" prefHeight="250.0" prefWidth="600.0">
          <children>
             <HBox alignment="CENTER" spacing="50.0">
                <children>
@@ -26,12 +26,18 @@
                   </HBox>
                   <ColorPicker fx:id="colorPicker" />
                </children>
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
             </HBox>
             <HBox alignment="CENTER" spacing="10.0">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description:" />
                   <TextField fx:id="descriptionText" prefHeight="25.0" prefWidth="425.0" />
                </children>
+               <VBox.margin>
+                  <Insets bottom="40.0" />
+               </VBox.margin>
             </HBox>
             <HBox alignment="CENTER" spacing="50.0">
                <children>
