--- a/src/javafxmlapplication/view/UpdateExpense.fxml
+++ b/src/javafxmlapplication/view/UpdateExpense.fxml
@@ -32,9 +32,15 @@
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Cost:" />
                         <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="112.0">
                            <children>
-                              <TextField fx:id="costField" prefHeight="25.0" prefWidth="100.0" />
+                              <TextField fx:id="costField" prefHeight="25.0" prefWidth="100.0">
+                                 <HBox.margin>
+                                    <Insets right="2.0" />
+                                 </HBox.margin></TextField>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="€" />
                            </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
                         </HBox>
                      </children>
                   </HBox>
@@ -43,15 +49,21 @@
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Units:" />
                         <TextField fx:id="unitField" prefHeight="25.0" prefWidth="60.0" />
                      </children>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
                   </HBox>
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="60.0" prefWidth="200.0" spacing="20.0">
                <children>
-                  <HBox alignment="CENTER" spacing="10.0">
+                  <HBox alignment="CENTER">
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Category:" />
-                        <ComboBox fx:id="categorySelection" prefHeight="26.0" prefWidth="230.0" />
+                        <ComboBox fx:id="categorySelection" prefHeight="26.0" prefWidth="230.0">
+                           <HBox.margin>
+                              <Insets left="10.0" right="5.0" />
+                           </HBox.margin></ComboBox>
                         <Button fx:id="addCategoryButton" mnemonicParsing="false" onAction="#addCategoryAction" text="+" />
                      </children>
                   </HBox>
@@ -109,8 +121,8 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="20.0">
                <children>
-                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveAction" prefHeight="30.0" prefWidth="52.0" text="Save" />
-                  <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancelAction" prefHeight="30.0" text="Cancel" />
+                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveAction" prefHeight="30.0" prefWidth="70.0" text="Save" />
+                  <Button fx:id="cancelButton" maxWidth="70.0" mnemonicParsing="false" onAction="#cancelAction" prefHeight="30.0" prefWidth="70.0" text="Cancel" />
                </children>
             </HBox>
          </children>
@@ -139,6 +151,11 @@
                   </Button>
                </children>
             </HBox>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Expense Editor">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Text>
          </children>
       </StackPane>
    </top>
