--- a/src/javafxmlapplication/view/LogIn.fxml
+++ b/src/javafxmlapplication/view/LogIn.fxml
@@ -107,10 +107,7 @@
    <top>
       <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" styleClass="header" BorderPane.alignment="CENTER">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="CashTrack">
-               <font>
-                  <Font name="Bernard MT Condensed" size="12.0" />
-               </font></Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="CashTrack" />
          </children>
       </HBox>
    </top>
